--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,10 +10,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0 # Garante que todos os branches e tags sejam baixados
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     - name: Configurar Git
       run: |
         git config user.name "Filipe Calegario"
-        git config user.email "fcac@cin.ufpe.br"
+        git config user.email ${{ secrets.MY_EMAIL }}}
     - name: Configurar Python
       uses: actions/setup-python@v2
       with:
